# TuneX

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  compile.sh  pyproject.toml  pytest.ini  requirements.txt
app/: app.py  logging_config.py  main_application.py
app/bayesopt/: baybe_service.py  objective.py  parameters.py  surrogate.py  transformations.py
app/bayesopt/kernels/: k1.py
app/core/: about.py  base.py  settings.py
app/models/: __init__.py  campaign.py  enums.py  workspace.py
app/models/parameters/: __init__.py  base.py  serialization.py  types.py
app/screens/campaign/: campaign_wizard.py
app/screens/campaign/panel/: campaign_panel.py  parameters_panel.py  runs_panel.py  settings_panel.py
app/screens/campaign/panel/services/: experiments_table.py  generation_progress.py  runs_data_manager.py  runs_list.py
app/screens/campaign/setup/: campaign_info_step.py  data_import_step.py  parameters_step.py
app/screens/campaign/setup/components/: constraint_widgets.py  csv_data_importer.py  csv_template_generator.py  data_import_widgets.py  parameter_managers.py  widget_factory.py
app/screens/campaign/steps/: campaign_default.py  campaign_info_step.py  data_import_step.py  parameters_step.py
app/screens/campaign/steps/components/: constraint_widgets.py  csv_data_importer.py  (+4 more)
app/screens/start/: start_screen.py
app/screens/start/components/: campaign_card.py  campaign_loader.py  recent_campaigns.py
app/screens/workspace/: select_workspace.py
app/shared/: constants.py
app/shared/components/: buttons.py  campaign_card.py  card_components.py  cards.py  dialogs.py  headers.py  workspace_card.py
app/shared/styles/: theme.py
app/shared/utils/: export_campaign.py
app/widgets/: main_window.py
app/widgets/campaign/: enums.py  launch_campaign_window.py
app/widgets/campaign/create/: campaign_info_step.py  create_campaign_window.py  data_import_step.py  launch_campaign_window.py  parameters_step.py
tests/: conftest.py  test_smoke.py
tests/bayesopt/: test_BO_objective.py  test_BO_parameters.py  test_BO_transformations.py
tests/core/: test_settings.py
tests/models/: test_campaign.py
tests/models/parameters/: test_parameters.py
tests/screens/campaign/: test_campaign_wizard.py
tests/screens/campaign/panel/: test_campaign_panel.py  test_parameters_panel.py  test_runs_panel.py  test_settings_panel.py
tests/screens/campaign/setup/: test_campaign_info_step.py  test_data_import_step.py  test_parameters_step.py
tests/screens/start/components/: test_campaign_loader.py  test_recent_campaigns.py
tests/screens/workspace/: test_select_workspace.py
tests/shared/components/: test_campaign_card.py  test_workspace_card.py
(+16 files in other folders)
